Inicio de Sesion con Facebook + Email
Se implementa uso de Firebase como gestor de inicio de Sesion, se agregan implementaciones de facebook e email. Se configura APPI de Facebook con hash de codigo en Firebase y APP TurIT. Se configura boton Cerrar Sesion en menu desplegable para el cierre de sesiones abiertas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
     <string name="texto_lugres_recomendados">Lugares recomendados a visitar.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="facebook_application_id" translatable="false">1720649918130250</string>
+
+    <string name="facebook_login_protocol_schema" translatable="false">fb1720649918130250</string>
+
 </resources>
